--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ h3 { font-size: 2.3em; }
 h4 { font-size: 1.9em; }
 
 img {
-  float: right;
+  float: left;
   border: 1px dotted black;
   margin: 0px 0px 15px 20px;
 }
