--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
 	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
 				</ul>-->
-				<p>Last update: September 27, 2019</p>
+<!--				<p>Last update: September 27, 2019</p>-->
 			</footer>
 		</body>
 	</html>
