--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,12 +19,12 @@
 			{{ content }}
 			
 			</div><!-- /.container -->
-			<footer>
+<!--			<footer>-->
 	    		<!--<ul>
 	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
 	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
 				</ul>-->
 <!--				<p>Last update: September 27, 2019</p>-->
-			</footer>
+<!--			</footer>-->
 		</body>
 	</html>
